made this field required when it is visible, bug where still required even if not in U.S.

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -1932,7 +1932,7 @@ a.download-video {
       }
     }
 
-    #email-preference-radio {
+    #email-preference-radio, #share-email-reg-part-preference-radio {
       p {
         margin: 0;
       }
